jvm opt updated